# recommendation-system

./: .gitattributes  .gitignore  pyvenv.cfg  requirements.txt
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/api/: routes.py  server.py
backend/src/api/core/: dtos.py
backend/src/data/processed/: interacoes_scored.parquet  items.parquet  top_news.parquet  user_id.parquet
backend/src/factory/: recommend.py  utils.py
backend/src/model/: interaction_matrix.pkl  model.pkl  nn_model.pkl  tfidf_matrix.pkl  user_item_csr.pkl
backend/src/usecase/recommend_usecase/: __init__.py  dtos.py
backend/src/usecase/users_usecase/: __init__.py  dtos.py
notebooks/: g1_news_recsys.ipynb  interactions.ipynb  interactions_with_pages.ipynb  recsys.ipynb  recsys_v2.ipynb  test_with_surprise.ipynb
